Revert "fix whitespaces below navbar"
This reverts commit 4afca52e48d1cb22e5c242a6ff4bdb5ad37341ae.

--- a/css/main.css
+++ b/css/main.css
@@ -449,7 +449,7 @@ footer .theme-by {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  margin-top: 0px; /* The small navbar is 50px tall + 1px border */
+  margin-top: 51px; /* The small navbar is 50px tall + 1px border */
   margin-bottom: 35px;
 }
 .intro-header.big-img  .big-img-transition {
